{
    "name": "P2Input",
    "maps": [
        {
            "name": "Input",
            "id": "17a1c5c9-dfec-4fad-abfc-f3ffd54be7cb",
            "actions": [
                {
                    "name": "Acceleration",
                    "type": "Value",
                    "id": "bd270d84-c64d-44a9-b675-344ff975f1d0",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "BrakeReverse",
                    "type": "Value",
                    "id": "fbd23568-4ab1-4c9b-8a48-94e92d79a42d",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Steer",
                    "type": "Value",
                    "id": "b92ffef5-7949-4616-b637-28b04e8ac690",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Pitch",
                    "type": "Button",
                    "id": "dc850edb-db98-4d06-89c4-05c1aee99966",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "HandBrake",
                    "type": "Button",
                    "id": "4769c531-f278-4107-b84c-ac5863acbb8b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "NextGear",
                    "type": "Button",
                    "id": "044b2a1a-94de-4313-b4c4-bf2a3bd345d8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PrevGear",
                    "type": "Button",
                    "id": "61d07b70-992a-4d24-8b3b-4724fdd16eb1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Lights",
                    "type": "Button",
                    "id": "e8c056fc-5457-4c82-848f-eea0e45a68dc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftTurnSignal",
                    "type": "Button",
                    "id": "dd6f791f-30cd-42b9-88a9-acbbeef385a2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightTurnSignal",
                    "type": "Button",
                    "id": "d4106a27-89b5-4fd6-893f-fecd1f567935",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Alarm",
                    "type": "Button",
                    "id": "1e5fc0e0-b45c-4273-8714-68c03801d478",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ResetCar",
                    "type": "Button",
                    "id": "f77d0c40-d2b2-4996-8204-ca45b3d1c846",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ChangeView",
                    "type": "Button",
                    "id": "cc1bfb8c-7271-47eb-8d9e-76b14bbfa75c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ViewDelta",
                    "type": "Value",
                    "id": "24ad352b-01fb-4bf1-a8cd-b81de160d4ab",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ConnectTrailer",
                    "type": "Button",
                    "id": "fde146cd-9637-430b-b369-e58f9c8f1c7c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Boost",
                    "type": "Button",
                    "id": "cfc72dab-5bd2-4569-ae2b-9aab752caad8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3cdd121d-a16a-4677-907d-ca6cf92a4dad",
                    "path": "<Keyboard>/numpad0",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "HandBrake",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e198f171-6a14-43de-9bbe-52d395850a0f",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "HandBrake",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "84bb6f3c-8119-45c3-be2c-db1801f47000",
                    "path": "<Keyboard>/numpadMultiply",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Lights",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4ccb0678-181f-435e-90ef-c94e2dbcd477",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Lights",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "98dc2f2f-882b-4942-8c61-847b89fb5eec",
                    "path": "<Keyboard>/numpad7",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "LeftTurnSignal",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6ffe477b-1647-452f-a8b7-21ffbbb65e84",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "LeftTurnSignal",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8b283106-65eb-4e32-8761-2c4ec56f713c",
                    "path": "<Keyboard>/numpad9",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "RightTurnSignal",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1931c711-d447-4eb3-93c4-b629cec70df0",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "RightTurnSignal",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f0b88622-567e-4e1c-9ba9-967ace76570e",
                    "path": "<Keyboard>/numpad2",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Alarm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "375a4e5f-0de2-4855-8f2e-8fec1e32dc36",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Alarm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dd324821-1c2b-4de4-8b2d-fff0f62a72d5",
                    "path": "<Keyboard>/numpadDivide",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ResetCar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8c2b9f82-b48b-430e-9f2c-12381d4eb1fd",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ResetCar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "622f08e5-5d1f-413f-bbb6-03d5d09adb73",
                    "path": "<Keyboard>/numpad1",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ChangeView",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "af665a0e-00c5-44dc-ab11-566fcc425085",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ChangeView",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4369001f-28a1-46d8-ae3a-dae515a59ee0",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "ScaleVector2(x=5,y=5)",
                    "groups": "Gamepad",
                    "action": "ViewDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "07f4bc6f-6fb9-45ae-96cb-5ee239d86137",
                    "path": "<Keyboard>/numpad8",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Acceleration",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6f292078-11f3-4525-b194-a680f9a2e032",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Acceleration",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a09449fb-ece1-416b-bc64-876cd854697e",
                    "path": "<Keyboard>/numpad5",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "BrakeReverse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "07bd19ab-4187-4835-bdc0-005096afec86",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "BrakeReverse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d508fd98-1cb9-4857-a7ab-444be11ffcb7",
                    "path": "<Keyboard>/numpadPlus",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "NextGear",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5f59b9e3-6139-4b50-8d1e-c3f155a881bd",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "NextGear",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ba7f7fba-27e2-4099-abc7-0ce3a946eae7",
                    "path": "<Keyboard>/numpadMinus",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "PrevGear",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "69e7060d-6a4f-4c1f-b056-3e8668a89aa2",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "PrevGear",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9b4c1fda-4de2-49cd-babc-5ebbad080b8d",
                    "path": "<Keyboard>/numpadEnter",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ConnectTrailer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5a9653d3-986e-4422-bcbd-e9fd129e5570",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ConnectTrailer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9ff5de4d-35fa-43a0-bf1b-e2f43e1330a2",
                    "path": "<Gamepad>/leftStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad;Keyboard",
                    "action": "Steer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "d6675167-8bdb-4b2e-9c0f-23c3117332d6",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steer",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "10bcb06d-75fd-4d21-8fe8-f3e0b33f763d",
                    "path": "<Keyboard>/numpad4",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Steer",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "a8c5329d-87b6-4c94-b74d-a033873ecfbe",
                    "path": "<Keyboard>/numpad6",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Steer",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "652d464b-e239-4d27-9909-e2d562b5c243",
                    "path": "<Keyboard>/numpad3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Boost",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "290f7eea-29ce-4106-8fa2-f550c4590e68",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Boost",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "fba8ff95-ee58-4759-83dd-e0bded520ec5",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pitch",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "d64f32a4-c638-43e4-9bde-48a4d1b8e782",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "AxisDeadzone(min=0.3,max=0.6)",
                    "groups": "Gamepad",
                    "action": "Pitch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "dd855ae1-06df-4e95-8bc5-5e1af9c29d6c",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "AxisDeadzone(min=0.3,max=0.6)",
                    "groups": "",
                    "action": "Pitch",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}